fix: z-index кнопки

--- a/blocks/page/__button/page__button.css
+++ b/blocks/page/__button/page__button.css
@@ -3,4 +3,5 @@
   background-color: transparent;
   border: none;
   outline: none;
+  z-index: 2;
 }
